updated links to user panel

--- a/user.html
+++ b/user.html
@@ -21,7 +21,7 @@
 				<li><img class="flag" src="images/uk.jpg" /></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#"><span class="glyphicon glyphicon-user"></span> Panel użytkownika</a></li>
+				<li><a href="user.html"><span class="glyphicon glyphicon-user"></span> Panel użytkownika</a></li>
 				<li><a href="admin.html"><span class="glyphicon glyphicon-cog"></span> Panel administratora</a></li>
 				<li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Wyloguj się</a></li>
 			</ul>
