--- a/admin.html
+++ b/admin.html
@@ -21,7 +21,7 @@
 				<li><img class="flag" src="images/uk.jpg" /></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#"><span class="glyphicon glyphicon-user"></span> Panel użytkownika</a></li>
+				<li><a href="user.html"><span class="glyphicon glyphicon-user"></span> Panel użytkownika</a></li>
 				<li><a href="admin.html"><span class="glyphicon glyphicon-cog"></span> Panel administratora</a></li>
 				<li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Wyloguj się</a></li>
 			</ul>
@@ -32,7 +32,7 @@
 		<img src="images/logo.png" />
 		<span>Biblioteka Online Kraków</span>
 	</div>
-	
+
 	<div class="container">
 		<div class="panel panel-default">
 			<div class="panel-heading">
@@ -75,6 +75,6 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/admin-add-worker.js"></script>
-	
+
 </body>
 </html>
