Blocking a book by the worker

--- a/worker-block-book.html
+++ b/worker-block-book.html
@@ -55,7 +55,29 @@
 					</ul>
 				</div>
 				<div class="col-md-9 text-center">
-					<h2 class="text-success">Witamy w panelu bibliotekarza.</h2>
+					<h2 class="text-success">Wypożyczone książki.</h2>
+					<table class="table-hover">
+						<thead>
+							<tr>
+								<th>Tytuł</th>
+								<th></th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Zbrodnia i kara</td>
+								<td><a href="#">Zablokuj</a></td>
+							</tr>
+							<tr>
+								<td>Matematyka dyskretna</td>
+								<td><a href="#">Zablokuj</a></td>
+							</tr>
+							<tr>
+								<td>Perfekcyjna Pani Domu</td>
+								<td><a href="#">Zablokuj</a></td>
+							</tr>
+						</tbody>
+					</table>
 				</div>
 			</div>
 		</div>
