Book description page.

--- a/index-book.html
+++ b/index-book.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/login.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<link rel="stylesheet" type="text/css" href="css/book.css" />
 
 </head>
 <body>
@@ -169,168 +170,23 @@
 		<input type="text" placeholder="Szukaj książek..."/><button type="submit"><i class="fa fa-search"></i></button>
 	</div>
 
-	<nav class="navbar navbar-default navbar-middle">
-		<div class="container">
-			<ul class="nav nav-justified">
-				<li>Najpopularniejsze</li>
-				<li>Polecamy</li>
-				<li>Nowości</li>
-				<li>Działy</li>
-				<li>Spis Alfabetyczny</li>
-			</ul>
-		</div>
-	</nav>
-
 	<div class="container main">
-		<div class="col2-3">
-			<div class="book-list">
-				<div class="col-xs-2">1</div>
-				<div class="col-xs-10"><a href="index-book.html">Tytuł książki</a></div>
-			</div>
-			<div class="book-details">
-				<img src="images/book.jpg" />
-			</div>
-			<div class="book-list">
-				<div class="col-xs-2">2</div>
-				<div class="col-xs-10"><a href="index-book.html">Tytuł książki</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-2">3</div>
-				<div class="col-xs-10"><a href="index-book.html">Tytuł książki</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-2">4</div>
-				<div class="col-xs-10"><a href="index-book.html">Tytuł książki</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-2">5</div>
-				<div class="col-xs-10"><a href="index-book.html">Tytuł książki</a></div>
-			</div>
-		</div><div class="col2-3">
-			<div class="book-list">
-				<div class="col-xs-2">1</div>
-				<div class="col-xs-10"><a href="index-book.html">Tytuł książki</a></div>
-			</div>
-			<div class="book-details">
-				<img src="images/book.jpg" />
-			</div>
-			<div class="book-list">
-				<div class="col-xs-2">2</div>
-				<div class="col-xs-10"><a href="index-book.html">Tytuł książki</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-2">3</div>
-				<div class="col-xs-10"><a href="index-book.html">Tytuł książki</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-2">4</div>
-				<div class="col-xs-10"><a href="index-book.html">Tytuł książki</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-2">5</div>
-				<div class="col-xs-10"><a href="index-book.html">Tytuł książki</a></div>
-			</div>
-		</div><div class="col2-3">
-			<div class="book-list">
-				<div class="col-xs-2">1</div>
-				<div class="col-xs-10"><a href="index-book.html">Tytuł książki</a></div>
-			</div>
-			<div class="book-details">
-				<img src="images/book.jpg" />
-			</div>
-			<div class="book-list">
-				<div class="col-xs-2">2</div>
-				<div class="col-xs-10"><a href="index-book.html">Tytuł książki</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-2">3</div>
-				<div class="col-xs-10"><a href="index-book.html">Tytuł książki</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-2">4</div>
-				<div class="col-xs-10"><a href="index-book.html">Tytuł książki</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-2">5</div>
-				<div class="col-xs-10"><a href="index-book.html">Tytuł książki</a></div>
-			</div>
-		</div><div class="col2-3">
-			<div class="book-list">
-				<div class="col-xs-12"><a href="#">Przygodowe</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-12"><a href="#">Przygodowe</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-12"><a href="#">Przygodowe</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-12"><a href="#">Przygodowe</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-12"><a href="#">Przygodowe</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-12"><a href="#">Przygodowe</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-12"><a href="#">Przygodowe</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-12"><a href="#">Przygodowe</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-12"><a href="#">Przygodowe</a></div>
-			</div>
-		</div><div class="col2-3">
-			<div class="book-list">
-				<div class="col-xs-6"><a href="#">A</a></div>
-				<div class="col-xs-6"><a href="#">M</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-6"><a href="#">B</a></div>
-				<div class="col-xs-6"><a href="#">N</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-6"><a href="#">C</a></div>
-				<div class="col-xs-6"><a href="#">O</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-6"><a href="#">D</a></div>
-				<div class="col-xs-6"><a href="#">N</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-6"><a href="#">E</a></div>
-				<div class="col-xs-6"><a href="#">P</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-6"><a href="#">F</a></div>
-				<div class="col-xs-6"><a href="#">R</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-6"><a href="#">G</a></div>
-				<div class="col-xs-6"><a href="#">S</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-6"><a href="#">H</a></div>
-				<div class="col-xs-6"><a href="#">T</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-6"><a href="#">I</a></div>
-				<div class="col-xs-6"><a href="#">U</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-6"><a href="#">J</a></div>
-				<div class="col-xs-6"><a href="#">W</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-6"><a href="#">K</a></div>
-				<div class="col-xs-6"><a href="#">Y</a></div>
-			</div>
-			<div class="book-list">
-				<div class="col-xs-6"><a href="#">L</a></div>
-				<div class="col-xs-6"><a href="#">Z</a></div>
-			</div>
+		<div class="col-md-4 text-center">
+			<img class="img-inline img-responsive book" src="images/book.jpg" />
+		</div>
+		<div class="col-md-8">
+			<span class="title">Tytuł książki</span>
+			<span class="author">Autor książki</span>
+			<span class="publisher">Wydawnictwo, 2001</span>
+			<span class="language">język polski</span>
+			<span class="genere">Przygodowa, Fantastyka</span>
+			<span class="text-success">DOSTĘPNA</span>
+		</div>
+		<div class="col-md-12">
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</div>
+		<div class="col-xs-12">
+			<button class="btn btn-default btn-reserve">REZERWUJ</button>
 		</div>
 	</div>
 
