--- a/user-borrowed-books.html
+++ b/user-borrowed-books.html
@@ -50,7 +50,7 @@
 				</div>
 				<div class="col-md-9 text-center">
 					<h2 class="text-success">Wypożyczone książki.</h2>
-					<table class="table-hover">
+					<table class="table table-hover">
 						<thead>
 							<tr>
 								<th>Tytuł</th>
