--- a/user-prolongs-book.html
+++ b/user-prolongs-book.html
@@ -51,7 +51,7 @@
 				<div class="col-md-9 text-center">
 					<h2 class="text-success">Prolonguj książkę.</h2>
 
-					<table class="table-hover">
+					<table class="table table-hover">
 						<thead>
 							<tr>
 								<th>Tytuł</th>
