--- a/draft/index.html
+++ b/draft/index.html
@@ -27,140 +27,6 @@
 		</div>
 	</nav>
 
-	<div class="modal fade" id="login_modal" tabindex="-1" role="dialog" aria-labelledby="modal-login-label" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal">
-						<span aria-hidden="true">&times;</span><span class="sr-only">Zamknij</span>
-					</button>
-					<h3 class="modal-title" id="modal-login-label">Zaloguj się do biblioteki online.</h3>
-					<p>Wpisz swoją nazwę użytkownika i hasło w celu zalogowania się:</p>
-				</div>
-				<div id="login_box" class="modal-body">
-					<div id="login_fail" style="display: none">
-						<div class="col-xs-4 text-right">
-							<i class="fa fa-times-circle text-danger" style="font-size: 40px;margin-bottom: 20px;"></i>
-						</div>
-						<div class="col-xs-8">
-							<span class="h3 text-danger" style="margin-top: 7px; display: inline-block;">Niepoprawne dane</span>
-						</div>
-					</div>
-					<div id="login_form">
-						<div class="form-group">
-							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
-							<input id="login_login" type="text" name="form-username" placeholder="Nazwa użytkownika..." class="form-username form-control">
-						</div>
-						<div class="form-group">
-							<label class="sr-only" for="form-password">Hasło</label>
-							<input id="login_pass" type="password" name="form-password" placeholder="Hasło..." class="form-password form-control">
-						</div>
-						<div class="form-group col-md-6">
-							<label><input type="checkbox" value=""> Zapamiętaj mnie</label>
-						</div>
-						<div class="form-group col-md-6">
-							<label class="btn-forgot"><a class="btn btn-primary btn-sm btn-forgot" href="#">Zapomniałem hasła</a></label>
-						</div>
-						<button id="login_button" class="btn">Zaloguj się!</button>
-					</div>
-					<div id="login_success" class="text-center" style="display: none">
-						<i class="fa fa-check-circle text-success" style="font-size: 120px;"></i><br/>
-						<span class="h3 text-success">Pomyślnie zalogowano!</span>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="modal fade" id="register_modal" tabindex="-1" role="dialog" aria-labelledby="modal-login-label" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal">
-						<span aria-hidden="true">&times;</span><span class="sr-only">Zamknij</span>
-					</button>
-					<h3 class="modal-title" id="modal-login-label">Zarejestruj się do biblioteki online.</h3>
-					<p>Wpisz swoją dane w celu zarejestrowania się:</p>
-				</div>
-				<div id="login_box" class="modal-body">
-					<div id="reg_fail" style="display: none">
-						<div class="row">
-							<div class="col-xs-4 text-right">
-								<i class="fa fa-times-circle text-danger" style="font-size: 40px;margin-bottom: 20px;"></i>
-							</div>
-							<div class="col-xs-8">
-								<span class="h3 text-danger" style="margin-top: 7px; display: inline-block;">Niepoprawne dane</span>
-							</div>
-						</div>
-					</div>
-					<div id="reg_form">
-						<div class="form-group">
-							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
-							<input id="reg_firstname" type="text" placeholder="Imię..." class="form-username form-control">
-							<i class="fa fa-check-circle text-success"></i>
-							<i class="fa fa-times-circle text-danger"></i>
-						</div>
-						<div class="form-group">
-							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
-							<input id="reg_lastname" type="text" placeholder="Nazwisko..." class="form-username form-control">
-							<i class="fa fa-check-circle text-success"></i>
-							<i class="fa fa-times-circle text-danger"></i>
-						</div>
-						<div class="form-group">
-							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
-							<input id="reg_email" type="text" name="form-username" placeholder="Adres e-mail..." class="form-username form-control">
-							<i class="fa fa-check-circle text-success"></i>
-							<i class="fa fa-times-circle text-danger"></i>
-						</div>
-						<div class="form-group">
-							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
-							<input id="reg_street" type="text" name="form-username" placeholder="Ulica..." class="form-username form-control">
-							<i class="fa fa-check-circle text-success"></i>
-							<i class="fa fa-times-circle text-danger"></i>
-						</div>
-						<div class="form-group">
-							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
-							<input id="reg_city" type="text" name="form-username" placeholder="Miejscowość..." class="form-username form-control">
-							<i class="fa fa-check-circle text-success"></i>
-							<i class="fa fa-times-circle text-danger"></i>
-						</div>
-						<div class="form-group">
-							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
-							<input id="reg_postcode" type="text" name="form-username" placeholder="Kod pocztowy..." class="form-username form-control">
-							<i class="fa fa-check-circle text-success"></i>
-							<i class="fa fa-times-circle text-danger"></i>
-						</div>
-						<div class="form-group">
-							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
-							<input id="reg_login" type="text" name="form-username" placeholder="Nazwa użytkownika..." class="form-username form-control">
-							<i class="fa fa-check-circle text-success"></i>
-							<i class="fa fa-times-circle text-danger"></i>
-						</div>
-						<div class="form-group">
-							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
-							<input id="reg_pass" type="password" name="form-username" placeholder="Hasło..." class="form-password form-control">
-							<i class="fa fa-check-circle text-success"></i>
-							<i class="fa fa-times-circle text-danger"></i>
-						</div>
-						<div class="form-group">
-							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
-							<input id="reg_pass_re" type="password" name="form-username" placeholder="Powtórz hasło..." class="form-password form-control">
-							<i class="fa fa-check-circle text-success"></i>
-							<i class="fa fa-times-circle text-danger"></i>
-						</div>
-						<button id="reg_button" class="btn">Zarejestruj się!</button>
-					</div>
-					<div id="reg_success" class="text-center" style="display: none">
-						<i class="fa fa-check-circle text-success" style="font-size: 120px;"></i><br/>
-						<span class="h3 text-success">Pomyślnie zarejestrowano!</span>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-
-
 	<div class="logo">
 		<img src="images/logo.png" />
 		<span>Biblioteka Online Kraków</span>
@@ -360,6 +226,138 @@
 		</div>
 	</div>
 
+	<div class="modal fade" id="login_modal" tabindex="-1" role="dialog" aria-labelledby="modal-login-label" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">
+						<span aria-hidden="true">&times;</span><span class="sr-only">Zamknij</span>
+					</button>
+					<h3 class="modal-title" id="modal-login-label">Zaloguj się do biblioteki online.</h3>
+					<p>Wpisz swoją nazwę użytkownika i hasło w celu zalogowania się:</p>
+				</div>
+				<div id="login_box" class="modal-body">
+					<div id="login_fail" style="display: none">
+						<div class="col-xs-4 text-right">
+							<i class="fa fa-times-circle text-danger" style="font-size: 40px;margin-bottom: 20px;"></i>
+						</div>
+						<div class="col-xs-8">
+							<span class="h3 text-danger" style="margin-top: 7px; display: inline-block;">Niepoprawne dane</span>
+						</div>
+					</div>
+					<div id="login_form">
+						<div class="form-group">
+							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
+							<input id="login_login" type="text" name="form-username" placeholder="Nazwa użytkownika..." class="form-username form-control">
+						</div>
+						<div class="form-group">
+							<label class="sr-only" for="form-password">Hasło</label>
+							<input id="login_pass" type="password" name="form-password" placeholder="Hasło..." class="form-password form-control">
+						</div>
+						<div class="form-group col-md-6">
+							<label><input type="checkbox" value=""> Zapamiętaj mnie</label>
+						</div>
+						<div class="form-group col-md-6">
+							<label class="btn-forgot"><a class="btn btn-primary btn-sm btn-forgot" href="#">Zapomniałem hasła</a></label>
+						</div>
+						<button id="login_button" class="btn">Zaloguj się!</button>
+					</div>
+					<div id="login_success" class="text-center" style="display: none">
+						<i class="fa fa-check-circle text-success" style="font-size: 120px;"></i><br/>
+						<span class="h3 text-success">Pomyślnie zalogowano!</span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="register_modal" tabindex="-1" role="dialog" aria-labelledby="modal-login-label" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">
+						<span aria-hidden="true">&times;</span><span class="sr-only">Zamknij</span>
+					</button>
+					<h3 class="modal-title" id="modal-login-label">Zarejestruj się do biblioteki online.</h3>
+					<p>Wpisz swoją dane w celu zarejestrowania się:</p>
+				</div>
+				<div id="login_box" class="modal-body">
+					<div id="reg_fail" style="display: none">
+						<div class="row">
+							<div class="col-xs-4 text-right">
+								<i class="fa fa-times-circle text-danger" style="font-size: 40px;margin-bottom: 20px;"></i>
+							</div>
+							<div class="col-xs-8">
+								<span class="h3 text-danger" style="margin-top: 7px; display: inline-block;">Niepoprawne dane</span>
+							</div>
+						</div>
+					</div>
+					<div id="reg_form">
+						<div class="form-group">
+							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
+							<input id="reg_firstname" type="text" placeholder="Imię..." class="form-username form-control">
+							<i class="fa fa-check-circle text-success"></i>
+							<i class="fa fa-times-circle text-danger"></i>
+						</div>
+						<div class="form-group">
+							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
+							<input id="reg_lastname" type="text" placeholder="Nazwisko..." class="form-username form-control">
+							<i class="fa fa-check-circle text-success"></i>
+							<i class="fa fa-times-circle text-danger"></i>
+						</div>
+						<div class="form-group">
+							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
+							<input id="reg_email" type="text" name="form-username" placeholder="Adres e-mail..." class="form-username form-control">
+							<i class="fa fa-check-circle text-success"></i>
+							<i class="fa fa-times-circle text-danger"></i>
+						</div>
+						<div class="form-group">
+							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
+							<input id="reg_street" type="text" name="form-username" placeholder="Ulica..." class="form-username form-control">
+							<i class="fa fa-check-circle text-success"></i>
+							<i class="fa fa-times-circle text-danger"></i>
+						</div>
+						<div class="form-group">
+							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
+							<input id="reg_city" type="text" name="form-username" placeholder="Miejscowość..." class="form-username form-control">
+							<i class="fa fa-check-circle text-success"></i>
+							<i class="fa fa-times-circle text-danger"></i>
+						</div>
+						<div class="form-group">
+							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
+							<input id="reg_postcode" type="text" name="form-username" placeholder="Kod pocztowy..." class="form-username form-control">
+							<i class="fa fa-check-circle text-success"></i>
+							<i class="fa fa-times-circle text-danger"></i>
+						</div>
+						<div class="form-group">
+							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
+							<input id="reg_login" type="text" name="form-username" placeholder="Nazwa użytkownika..." class="form-username form-control">
+							<i class="fa fa-check-circle text-success"></i>
+							<i class="fa fa-times-circle text-danger"></i>
+						</div>
+						<div class="form-group">
+							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
+							<input id="reg_pass" type="password" name="form-username" placeholder="Hasło..." class="form-password form-control">
+							<i class="fa fa-check-circle text-success"></i>
+							<i class="fa fa-times-circle text-danger"></i>
+						</div>
+						<div class="form-group">
+							<label class="sr-only" for="form-username">Nazwa użytkownika</label>
+							<input id="reg_pass_re" type="password" name="form-username" placeholder="Powtórz hasło..." class="form-password form-control">
+							<i class="fa fa-check-circle text-success"></i>
+							<i class="fa fa-times-circle text-danger"></i>
+						</div>
+						<button id="reg_button" class="btn">Zarejestruj się!</button>
+					</div>
+					<div id="reg_success" class="text-center" style="display: none">
+						<i class="fa fa-check-circle text-success" style="font-size: 120px;"></i><br/>
+						<span class="h3 text-success">Pomyślnie zarejestrowano!</span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<footer>
 		<div class="container-fluid">
 			<div class="container">
@@ -376,8 +374,8 @@
 	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/main.js"></script>
 
 </body>
 </html>
